[gd_scene load_steps=10 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Menu/Assets.gd" type="Script" id=2]
[ext_resource path="res://Sounds/ClickGumble.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/BlukBuluk.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/menu_assets/bubbles_menu.png" type="Texture" id=5]
[ext_resource path="res://Fonts/BubblegumSans-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/environment_assets/leaf.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]
resource_name = "BalonAni"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Animation/Icon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 641, 1082 ), Vector2( 641, 363 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BlukBluk:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Animation/ColorRect:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.8, 0.219608, 0.462745, 0 ), Color( 0.8, 0.219608, 0.462745, 1 ) ]
}

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 6 )

[node name="Assets" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1424.0
margin_bottom = 1416.0
color = Color( 0.980392, 0.129412, 0.129412, 1 )

[node name="Animation" type="AnimationPlayer" parent="."]
anims/BalonAni = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="Animation"]
show_behind_parent = true
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.8, 0.219608, 0.462745, 0 )

[node name="Icon" type="Sprite" parent="Animation"]
position = Vector2( 641, 1082 )
texture = ExtResource( 5 )

[node name="BackButton" type="TouchScreenButton" parent="."]
modulate = Color( 1, 0.364706, 0.145098, 1 )
position = Vector2( 144, 96 )
rotation = 3.14159
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 7 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 3.0
bus = "Sfx"

[node name="BlukBluk" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Sfx"

[node name="Label" type="Label" parent="."]
margin_left = 128.0
margin_top = 64.0
margin_right = 1198.0
margin_bottom = 373.0
custom_fonts/font = SubResource( 2 )
text = "Oyun içi tüm çizimler bize ait.

Sesler hazır kullanıldı. Sesleri aldıgımız 
site linki asagıdadır. Tıklayarak ulaşsabilirsiniz"

[node name="Label2" type="Label" parent="."]
modulate = Color( 0.027451, 0.247059, 0.0627451, 1 )
margin_left = 400.0
margin_top = 496.0
margin_right = 930.0
margin_bottom = 608.0
custom_fonts/font = SubResource( 2 )
text = "https://pixabay.com/"

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
modulate = Color( 1, 1, 1, 0.00392157 )
position = Vector2( 384, 464 )
scale = Vector2( 8.625, 2.375 )
normal = ExtResource( 1 )

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
